force-app/main/default/objects/Contact/fields/AE_Modular_Contact__c.field-meta.xml
<CustomField>
    <fullName>AE_Modular_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates this contact is associated with the Modular Business Unit.</description>
    <label>AE Modular Contact</label>
    <type>Checkbox</type>
</CustomField>