force-app/main/default/objects/Contact/fields/Contact_Unique_ID_Legacy__c.field-meta.xml
<CustomField>
    <fullName>Contact_Unique_ID_Legacy__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Contact Unique ID (Legacy)</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>