force-app/main/default/objects/Contact/fields/Key_Contact__c.field-meta.xml
<CustomField>
    <fullName>Key_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates a key contact at the partner</description>
    <inlineHelpText>Indicates a key contact at the partner</inlineHelpText>
    <label>Referred</label>
    <type>Checkbox</type>
</CustomField>