force-app/main/default/objects/Contact/fields/Last_Policy_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Policy_Purchase_Date__c</fullName>
    <formula>Account.Last_Policy_Purchase_Date__c</formula>
    <label>Last Policy Purchase Date</label>
    <type>Date</type>
</CustomField>