force-app/main/default/objects/Contact/fields/No_of_Referred_Opps_Closed_This_Month__c.field-meta.xml
<CustomField>
    <fullName>No_of_Referred_Opps_Closed_This_Month__c</fullName>
    <description>New Business Opportunities Only</description>
    <inlineHelpText>New Business Opportunities Only</inlineHelpText>
    <label>No. of Referred Opps Closed This Month</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>