force-app/main/default/objects/Contact/fields/Partner_Channel_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Partner_Channel_Marketing__c</fullName>
    <formula>IF ( IsPersonAccount = TRUE, 
Text( Partner_pc__r.Channel__c ),
Text (Account.Channel__c))</formula>
    <label>Partner Channel Marketing</label>
    <type>Text</type>
</CustomField>