force-app/main/default/objects/Contact/fields/Partner_pc__c.field-meta.xml
<CustomField>
    <fullName>Partner_pc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This Partner field is to be used to reference Partner related information on the Contractor Account</description>
    <label>Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>