force-app/main/default/objects/Contact/fields/PI_Renewal_Date_from_Salesforce_Opp__c.field-meta.xml
<CustomField>
    <fullName>PI_Renewal_Date_from_Salesforce_Opp__c</fullName>
    <label>PI Renewal Date from Salesforce Opp</label>
    <type>Date</type>
</CustomField>