force-app/main/default/objects/Contact/fields/PI_Renewal_Date_Pardot__c.field-meta.xml
<CustomField>
    <fullName>PI_Renewal_Date_Pardot__c</fullName>
    <label>PI Renewal Date Pardot</label>
    <type>Date</type>
</CustomField>