force-app/main/default/objects/Contact/fields/Related_Account_Unique_ID_Legacy__c.field-meta.xml
<CustomField>
    <fullName>Related_Account_Unique_ID_Legacy__c</fullName>
    <label>Related Account Unique ID (Legacy)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>