force-app/main/default/objects/Contact/fields/RF_Count__c.field-meta.xml
<CustomField>
    <fullName>RF_Count__c</fullName>
    <label>RF Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>