force-app/main/default/objects/Contact/listViews/All_Partner_Contacts.listView-meta.xml
<ListView>
    <fullName>All_Partner_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>ACTION_CADENCE</columns>
    <columns>ACTION_CADENCE_ASSIGNEE</columns>
    <columns>ACTION_CADENCE_STATE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>RF_Link__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Partner_Accounts</value>
    </filters>
    <label>All Partner Contacts</label>
</ListView>